<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content">


        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/add_new_book"
                  android:textSize="21sp"
                  android:textStyle="bold"
                  android:layout_alignParentStart="true"
                  android:layout_toStartOf="@+id/closeCross"
                  android:textAlignment="center"
                  android:layout_centerVertical="true"
                  android:id="@+id/title"
                  android:gravity="center_horizontal"/>

        <ImageView
                android:id="@+id/closeCross"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_action_close"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/for_closing_app"
        />

    </RelativeLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
    >
        <ImageView
                android:layout_width="110dp"
                android:layout_height="125dp"
                android:background="@drawable/ic_action_add_photo"
                android:layout_marginEnd="10dp"
                android:scaleType="fitXY"
                android:id="@+id/addPic"

        />
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
        >

            <EditText android:layout_width="200dp"
                      android:layout_height="50dp"
                      android:id="@+id/newNameLine"
                      android:hint="@string/book_name"
                      android:textAlignment="center"
                      android:gravity="center_horizontal"
                      android:importantForAutofill="no"
                      android:inputType="text"
            />

            <EditText android:layout_width="200dp"
                      android:layout_height="50dp"
                      android:id="@+id/newAuthorLine"
                      android:hint="@string/author_name"
                      android:textAlignment="center"
                      android:gravity="center_horizontal"
                      android:importantForAutofill="no"
                      android:inputType="text"
            />

            <EditText android:layout_width="200dp"
                      android:layout_height="wrap_content"
                      android:inputType="textMultiLine"
                      android:lines="5"
                      android:maxLines="5"
                      android:id="@+id/newDescriptionLine"
                      android:hint="@string/description"
                      android:textAlignment="center"
                      android:gravity="center_horizontal"
                      android:importantForAutofill="no"
            />


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_gravity="center">



        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textAllCaps="false"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/add"
        />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/cancel"

        />
    </LinearLayout>

</LinearLayout>