<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="horizontal"
              android:layout_height="145dp"
              android:background="@color/white"
              android:layout_marginTop="10dp"
              android:layout_marginEnd="5dp"
              android:layout_marginStart="5dp"
>

    <ImageView
            android:layout_width="110dp"
            android:layout_height="125dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/ic_action_add_photo"
            android:contentDescription="@string/todo"
            android:id="@+id/pic_place_holder"
    />
    <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="125dp"
            android:layout_marginStart="5dp"
            android:padding="2dp"
            android:layout_marginEnd="5dp"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_name"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/bookName"
                android:ellipsize="end"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_name"
                android:textSize="16sp"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:id="@+id/authorName"
                android:ellipsize="end"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:textSize="15sp"
                android:maxLines="4"
                android:ellipsize="end"
                android:textColor="@color/black"
                android:id="@+id/description"
        />
    </LinearLayout>



</LinearLayout>