<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.BookActivity"
        android:gravity="center|top"
        android:orientation="vertical"
       >


    <ImageView
            android:id="@+id/detailedPic"
            android:layout_marginTop="25dp"
            android:scaleType="fitXY"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:background="@drawable/ic_action_error"
            tools:targetApi="m"
            tools:ignore="UnusedAttribute"
            android:contentDescription="@string/pic_of_book"/>

    <TextView
            android:id="@+id/detailedAuthorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_marginTop="5dp"
    />
    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"

            android:text="@string/lorem_ipsum"
            android:textSize="20sp"
            android:maxLines="16"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:id="@+id/detailedDescription"
    />






</LinearLayout>